# Glob

./: .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  Database.md  Docker.md  Dockerfile  GetStart.md  Glob.cabal  Glob.md  QuickStart.md  README.md  ReadMe.md  Readme.md  SUMMARY.md  Summary.md  TODO.md  checks.m4  client_session_key.aes  config.json  configure.ac  daocloud.yml  part1.md  sssta-docker.sh  stack-8.2.1.yaml  stack.yaml
.integration/DockerCompose/: example.yaml
.integration/Dockerfiles/: Dockerfile  Dockerfile.debug
.integration/Dockerfiles/hub/: Dockerfile.debug
.integration/ShellScript/: start.sh
.integration/StackYaml/: stack-lts-9.0.yaml
.integration/TravisScript/: before.sh  build.sh  test.sh  update.sh
.integration/travis/: build.sh  update.sh
.stack-yaml/: lts-8.14.yaml  lts-8.18.yaml  lts-8.20.yaml
OLD/: Docker.md  Glob.md  LICENSE.md  Source.md
bin.src/: Main.hs  client_session_key.aes
bin.src/Main/: CmdArgs.hs
database/: database.sql  function.sql  inner.sql  script.sql  table.sql
dockerfiles/: Dockerfile
dockerfiles/DaoCloud/: Dockerfile
dockerfiles/Travis-CI/: Dockerfile
dockerfiles/with-dl/: Dockerfile
dockerfiles/with-null/: Dockerfile
dockerfiles/with-sl/: Dockerfile
dockerfiles/with-tls/: Dockerfile
dockerfiles/with-tls-dl/: Dockerfile
dockerfiles/with-tls-sl/: Dockerfile
glob-auth/: ChangeLog.md  LICENSE  glob-auth.cabal
glob-auth/lib/Glob/Auth/: Token.lhs
glob-auth/src/Glob/: Auth.hs  Auth.lhs
glob-auth/src/Glob/Auth/: Core.hs  Core.lhs  Info.hs  Info.lhs  Internal.lhs  Token.hs  Token.lhs  Types.hs  Types.lhs
glob-auth/test/: test-auth.hs  test-core.hs
glob-auth/test.src/auth/: AuthSpec.hs  TestImport.hs
glob-auth/test.src/auth-core/: TestImport.hs
glob-auth/test.src/core/: test-core.hs
glob-auth/test/auth/: AuthSpec.hs
glob-auth/test/core/: test-core.hs
glob-common/: ChangeLog.md  glob-common.cabal
glob-core/: ChangeLog.md  glob-core.cabal
glob-core/config/: background.route  database  glob.route
glob-core/import/: Import.lhs
glob-core/import/Import/: ByteStringUtf8.lhs  Logger.lhs  TH.lhs  Text.lhs  Wai.lhs
glob-core/lib/Glob/: Auth.lhs  Config.lhs  Foundation.lhs  Handler.lhs
glob-core/lib/Glob/Handler/: Fetch.lhs  Internal.lhs  Query.lhs
glob-core/lib/Glob/Handler/Query/: Parser.lhs
glob-core/src/: Glob.hs  Import.hs
glob-core/src/Glob/: Auth.hs  Auth.lhs  Common.lhs  Config.lhs  Core.lhs  Database.hs  Foundation.hs  Foundation.lhs  Handler.hs  Handler.lhs  MDBS.hs  Model.lhs  Types.lhs
glob-core/src/Glob/Common/: Infos.lhs
glob-core/src/Glob/Core/: Control.hs  Exception.hs  Info.hs  Model.hs  View.hs
glob-core/src/Glob/Core.old/: Handler.lhs  Model.lhs
glob-core/src/Glob/Core.old/Common/: Infos.lhs
glob-core/src/Glob/Core.old/Handler/: Fetch.lhs
glob-core/src/Glob/Core/Control/: Internal.hs
glob-core/src/Glob/Core/Model/: Internal.hs  TH.hs
glob-core/src/Glob/Core/View/: Internal.hs  Query.hs
glob-core/src/Glob/Core/View/Query/: Parsec.hs
glob-core/src/Glob/Foundation/: Base.hs  Common.hs  Config.hs
glob-core/src/Glob/Handler/: Background.lhs  Fetch.lhs  Get.hs  Get.lhs  Internal.lhs  Post.hs  Query.lhs  Static.hs  Static.lhs
glob-core/src/Glob/Handler/Query/: Parser.lhs
glob-core/src/Glob/MDBS/: MongoDB.hs  MySQL.hs  Postgres.hs
glob-core/src/Glob/Sub/: Background.hs
glob-core/src/Glob/Sub/Background/: Data.hs  TH.hs
glob-core/src/Import/: ByteString.hs  Common.hs  Handler.hs  Monad.hs  Oth1.hs  Oth2.hs  Oth3.hs  TH.hs  Text.hs
glob-core/template/: blogitem.hamlet  layout.hamlet  page.hamlet
glob-core/test/: Internal.hs  ModelSpec.hs
glob-ih/: ChangeLog.md  glob-ih.cabal
glob-ih/src/: Main.hs  Main.lhs
glob-launch/: ChangeLog.md  glob-launch.cabal
glob-launch/src/: Main.hs
glob-launch/src/Glob/: Launch.hs  Launch.lhs
glob-launch/src/Glob/Launch/: Internal.hs
glob-launch/src/launch/: Main.lhs
glob-launcher/: glob-launcher.cabal
glob-launcher/launch.docker/: MDBS.hs  Main.hs
glob-main/: glob-main.cabal
glob-tool/: ChangeLog.md  glob-tool.cabal
glob-tool/glob-ih/: ChangeLog.md  glob-ih.cabal
glob-tool/glob-ih/src/: Main.lhs
glob-tool/glob-mk/: ChangeLog.md  glob-mk.cabal
glob-tool/glob-mk/src/: Main.lhs
glob-tool/src/: Main.hs
glob-tool/src/Glob/Tool/: Del.hs  Ih.hs  Init.hs  Make.hs  MakeM.hs  Nav.hs  New.hs  Opt.hs  Repo.hs  Script.hs
glob-tool/src/ih/: Main.lhs
glob-tool/src/mk/: Main.lhs
glob-tool/src/newpost/: Main.lhs
glob-tools/glob-ih/: glob-ih.cabal  glob-ih.cabal~
glob-tools/glob-newpost/: glob-newpost.cabal  glob-newpost.cabal~
glob-tools/glob-timecheck/: ChangeLog.md  glob-timecheck.cabal
glob-tools/glob-tool/: ChangeLog.md  glob-tool.cabal
glob-tools/glob-update/: glob-update.cabal
glob-utils/: ChangeLog.md  glob-utils.cabal
integration/DockerCompose/: example.yaml
integration/ShellScript/: entrypoint.py  entrypoint.sh  start.ps1  start.sh
integration/StackSolver/: stack7103.yaml
integration/StackYaml/: 8.0.1-7.19.yaml
integration/TravisScript/: before.sh  build.sh  update.sh
launch.bin/docker/: Main.hs
launch.bin/simple/: Main.hs
lib/: Glob.hs
lib/Glob/: Config.hs  Database.hs  Management.hs  Tls.hs
license/: LICENSE
nginx/: create.sh  nginx.conf  run.sh
old/: Readme.md
old/glob-core/: ChangeLog.md
old/wiki-doc/: hacker-guide.tex
old/wiki-man/: 1.glob-launch.md  1.glob-timecheck.md  7.glob-docker.md  to_roff.sh
src/: Glob.hs  MDB.hs
src.bin/: management.uwp
src.bin/glob/: Main.hs
src.bin/helper.identify/: Main.hs
src.bin/launch.docker/: Main.hs
src.bin/launch.simple/: Main.hs
src/Glob/: Auth.hs  Common.hs  Config.hs  Data.hs  Database.hs  Handler.hs  Management.hs  Static.hs  Tls.hs
src/QuasiContext/: BlogItem.hamlet  BlogItem.julius  Home.hamlet  Page.hamlet  layout.hamlet
stack-yaml/: lts-8.4.yaml
tools.bin/: management.uwp
tools.bin/helper.identify/: Main.hs
wiki-man/: 1.glob-ih.md  1.glob-launch.md  1.glob-update.md  7.glob-docker.md  7.glob-inner-variables.md  7.glob-makefile.md  to_roff.sh
(+71 files in other folders)
