name:                glob-auth

version:             0.1.5.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Qinka
maintainer:          qinka@live.com
copyright:           Copyright 2017 Qinka
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
                     
flag client
     description: For client, disable some function about server.
     default: False
                     
library
  exposed-modules:     Glob.Auth.Core
                       Glob.Auth.Info
  other-modules:       Paths_glob_auth
  build-depends:       base >=4.9 && <4.10
                     , cryptonite >= 0.20
                     , glob-utils == 0.1.5.*
                     , memory >= 0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  if !flag(client)
     exposed-modules: Glob.Auth
     -- build-depends:   yesod-core >= 1.4.30
  
test-suite test-core
  type:              exitcode-stdio-1.0
  main-is:           test-core.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  other-extensions:  OverloadedStrings
  build-depends:     base >= 4.9 && < 4.10
                   , glob-utils == 0.1.5.*
                   , random
                   , MonadRandom
                   , glob-auth == 0.1.5.*
                   
test-suite test-auth
  if flag(client)
     buildable: False
  else
     buildable: True
  type:              exitcode-stdio-1.0
  main-is:           test-auth.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  other-extensions:  OverloadedStrings
  build-depends:     base >= 4.9 && < 4.10
                   , glob-auth == 0.1.5.*
                   , glob-utils == 0.1.5.*
                   , hspec >= 2.0
                   , hspec-wai >= 0.6
                   , yesod-test >= 1.5
                   , yesod-core >= 1.4.30
                   , wai >= 3.2
