-- glob-core
-- Gy

name:                glob-core
version:             0.1.5.10
synopsis:            The core of the glob.
description:         Just a small blog backend.
license-file:        LICENSE
author:              Qinka
maintainer:          qinka@live.com
copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library 
  exposed-modules:     Glob.Core.Model.Internal
                       Glob.Core.Model.TH
                       Glob.Core.Model
                       Glob.Core.View.Internal
                       Glob.Core.View.Query.Parsec
                       Glob.Core.View.Query
                       Glob.Core.View
                       Glob.Core.Info
                       Glob.Core.Control
                       Glob.Core.Control.Internal
  other-modules:       Paths_glob_core
  build-depends:       base >= 4 && < 5
                     , glob-utils == 0.1.5.*
                     , glob-auth  == 0.1.5.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    FlexibleContexts
                       FunctionalDependencies
                       MultiParamTypeClasses
                       OverloadedStrings
                       QuasiQuotes
                       RecordWildCards
                       TemplateHaskell
                       TypeFamilies

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base >= 4 && < 5
                  , hspec
                  , glob-utils
                  , glob-core
  other-modules:    ModelSpec
                    Internal
  default-language: Haskell2010
  ghc-options:      -Wno-missing-fields
                       
source-repository head
  type: git
  location: https://github.com/Qinka/Glob.git
  subdir: glob-core
  branch: 0.1.5/dev
