-- glob-launch
-- Gy

name:                glob-launch
version:             0.1.5.5
synopsis:            The launch of glob.
description:         Just a small blog backend.
license-file:        LICENSE
author:              Qinka
maintainer:          qinka@live.com
copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable glob-launch
  main-is:             Main.hs
  other-modules:       Paths_glob_launch
                       Glob.Launch
                       Glob.Launch.Internal
  build-depends:       base >= 4 && < 5
                     , glob-utils == 0.1.5.*
                     , glob-auth  == 0.1.5.*
                     , glob-core  == 0.1.5.*
                     , cmdargs >= 0.10.10
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    FlexibleInstances
                       MultiParamTypeClasses
                       OverloadedStrings
                       QuasiQuotes
                       RecordWildCards
                       TemplateHaskell
                       TypeFamilies
                       ViewPatterns
  
source-repository head
  type: git
  location: https://github.com/Qinka/Glob.git
  subdir: glob-launch
  branch: 0.1.5/dev