-- glob-tool
-- Gy
        
name:                glob-tool
version:             0.1.5.15
synopsis:            The tool set for glob
description:         The tool set for glob
license:             GPL-3
license-file:        LICENSE
author:              Qinka
maintainer:          qinka@live.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable glob
  main-is:             Main.hs
  other-modules:       Glob.Tool.Opt
                       Glob.Tool.Ih
                       Glob.Tool.Repo
                       Glob.Tool.Make
                       Glob.Tool.MakeM
                       Glob.Tool.Nav
                       Glob.Tool.Del
                       Glob.Tool.Init
                       Glob.Tool.New
                       Glob.Tool.Script
  other-extensions:    DeriveDataTypeable
                       FlexibleInstances
                       GADTs
                       OverloadedStrings
                       RecordWildCards
                       TemplateHaskell
  build-depends:       base >= 4 && < 5
                     , glob-utils == 0.1.5.*
                     , glob-auth == 0.1.5.*
                     , cmdargs
                     , directory
                     , echo
                     , filepath
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
